[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cron-lite"
version = "0.1.0"
description = "Zero-dependency async cron scheduler for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["cron", "scheduler", "async", "asyncio", "task-scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/RedBeret/cron-lite"
Repository = "https://github.com/RedBeret/cron-lite"
Issues = "https://github.com/RedBeret/cron-lite/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cron_lite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
